--- a/views/setting.ejs
+++ b/views/setting.ejs
@@ -35,16 +35,27 @@
   <div class="tab-content">
     <!-- 프로필 설정 -->
     <div class="tab-pane fade show active" id="profile">
-      <!-- <div class="text-center">
-          <img src="https://via.placeholder.com/80" class="profile-img mb-3" alt="프로필 이미지">
-          <input type="file" class="form-control mb-3" accept="image/*">
-      </div> -->
-      <div class="mb-3">
-          <label class="form-label">이름</label>
-          <input type="text" class="form-control username" pattern="[A-Za-z0-9가-힣]{2,12}" placeholder="변경할 닉네임을 입력 하십시오">
+      <div class="text-center mb-3">
+        <img src="https://via.placeholder.com/80" class="profile-img mb-3" alt="프로필 이미지">
+        <div class="d-flex align-items-center gap-2">
+          <div class="input-group mb-3">
+          <input type="file" class="form-control" accept="image/*">
+          <button class="btn btn-success" style="width: 20%;">저장</button>
+        </div>
+        </div>
       </div>
-      <button class="btn btn-success username w-100">저장</button>
+    
+      <div class="mb-3">
+        <div class="d-flex align-items-center gap-2">
+          <div class="input-group mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-default">아이디</span>
+            <input type="text" class="form-control username" pattern="[A-Za-z0-9가-힣]{2,12}" placeholder="변경할 닉네임을 입력 하십시오" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+            <button class="btn btn-success username" style="width: 20%;">저장</button>
+          </div>
+        </div>
+      </div>
     </div>
+    
     <!-- 보안 설정 -->
     <div class="tab-pane fade" id="security">
       <div class="mb-3">
