--- a/views/view.ejs
+++ b/views/view.ejs
@@ -165,6 +165,7 @@
         let comments = '';
 
         response.forEach(item => {
+          const userIcon = item.admin ? '<i class="fa fa-user-plus" aria-hidden="true" style="color:#4d4bbe"></i>' : '<i class="fa fa-user-circle-o" aria-hidden="true"></i>';
           const date = new Date(item.created_at);
           const formatted = date.toLocaleString('ko-KR', {
             year: 'numeric',
@@ -178,8 +179,8 @@
           comments +=
           `<div class="comment" id="${item.id}">
             <div class="info">
-              <i class="fa fa-user-circle-o" aria-hidden="true"></i>
-              <span user_id="${item.user_id}"><b>${item.username}</b></span>|
+              ${userIcon}
+              <span user_id="${item.user_id}" ${item.admin ? 'style="color:#4d4bbe"' : ''}><b>${item.username}</b></span>|
               <span>${formatted}</span>
               <button type="button" class="btn btn-dark editComment ${'<%=authStatus.username%>'==item.username ? '':'none'}">수정</button>
               <button type="button" class="btn btn-danger deleteComment ${'<%=authStatus.username%>'==item.username ? '':'none'}">삭제</button>
@@ -244,7 +245,7 @@
     $(this).toggleClass('active');
 
     $.ajax({
-      url: '/board/<%=id%>/likes',
+      url: '/boards/<%=id%>/likes',
       method: status,
       success: function(response) {
         console.log(response);
@@ -268,16 +269,17 @@
       success: function(response) {
         console.log(response)
         // 새로운 댓글을 즉시 추가
+        const userIcon = response.data.admin ? '<i class="fa fa-user-plus" aria-hidden="true" style="color:#4d4bbe"></i>' : '<i class="fa fa-user-circle-o" aria-hidden="true"></i>';
         let newComment = `
-        <div class="comment" id="${response.comment.id}">
+        <div class="comment" id="${response.data.id}">
           <div class="info">
-            <i class="fa fa-user-circle-o" aria-hidden="true"></i>
-            <span user_id="${response.comment.user_id}"><b>${response.comment.username}</b></span>|
-            <span>${new Date(response.comment.created_at).toLocaleString('ko-KR', { year: 'numeric', month: '2-digit', day: '2-digit', hour: '2-digit', minute: '2-digit' }).replace(/\//g, '-').replace(',', '').substring(0, 22)}</span>
+            ${userIcon}
+            <span user_id="${response.data.user_id}" ${response.data.admin ? 'style="color:#4d4bbe"' : ''}><b>${response.data.username}</b></span>|
+            <span>${new Date(response.data.created_at).toLocaleString('ko-KR', { year: 'numeric', month: '2-digit', day: '2-digit', hour: '2-digit', minute: '2-digit' }).replace(/\//g, '-').replace(',', '').substring(0, 22)}</span>
             <button type="button" class="btn btn-dark editComment">수정</button>
             <button type="button" class="btn btn-danger deleteComment">삭제</button>
           </div>
-          <div class="content">${response.comment.content}</div>
+          <div class="content">${response.data.content}</div>
         </div>`;
 
         $(".comments").append(newComment);
